<resources>
  <string name="app_name">Nano Timer</string>
  <string name="app_name_copyright">&#169; 2014-2016 Nano Timer</string>
  <string name="app_description">Rubik\'s Cube timer for Android</string>
  <string name="app_license">This app uses drag-sort-listview, MPAndroidChart and android-wheel libraries licensed under Apache 2.0.</string>
  <string name="feedback_message">If you encounter a bug or have any suggestions or comments, don\'t hesitate to send an email to the address below.</string>
  <string name="dev_name">Nicolas Aubinet</string>
  <string name="email">NanoTimerCube@gmail.com</string>
  <string name="about">About</string>
  <string name="backspace_exit">Press back again to exit</string>
  <string name="cube_type">Cube type:</string>
  <string name="solve_type">Solve type:</string>
  <string name="history">History</string>
  <string name="solves">solves</string>
  <string name="scramble">Scramble</string>
  <string name="scrambleC">Scramble:</string>
  <string name="start">Start</string>
  <string name="practice">Practice</string>
  <string name="add">Add</string>
  <string name="add_solvetype">Add solve type</string>
  <string name="save">Save</string>
  <string name="action">Action</string>
  <string name="rename">Rename</string>
  <string name="cancel">Cancel</string>
  <string name="confirm">Confirm</string>
  <string name="solve_type_already_exists">A solve type with the same name already exists</string>
  <string name="step_already_exists">A step with the same name already exists for this solve type</string>
  <string name="name_contains_forbidden_char">Invalid character in name: \'%1$s\'</string>
  <string name="delete_solve_type_confirmation">Are you sure you want to delete the solve type \'%1$s\' and all its times?</string>
  <string name="new_session_confirmation">Are you sure you want to start a new session?</string>
  <string name="solvetype_has_times_addsteps">This solve type contains some times. Adding steps will delete them. Are you sure you want to continue?</string>
  <string name="min_steps_count_not_reached">You must create at least two steps</string>
  <string name="max_steps_count_reached">The steps count limit has been reached</string>
  <string name="add_step">Add step</string>
  <string name="add_steps">Add steps</string>
  <string name="last_avg_of">Last avg of</string>
  <string name="best_avg_of">Best avg of</string>
  <string name="success_avg">Avg of successes</string>
  <string name="accuracy">Accuracy</string>
  <string name="life">Life</string>
  <string name="lifetime_best">Lifetime best:</string>
  <string name="lifetime_avg">Global avg:</string>
  <string name="lifetime_accuracy">Global accur:</string>
  <string name="last_mean_of_three">Last mean of 3:</string>
  <string name="best_mean_of_three">Best mean of 3:</string>
  <string name="solves_count">Solves count:</string>
  <string name="mean_of_three">Mean of 3:</string>
  <string name="plus_two">+2</string>
  <string name="DNF">DNF</string>
  <string name="delete">Delete</string>
  <string name="session_details">Session details</string>
  <string name="new_session">New session</string>
  <string name="time">Time:</string>
  <string name="averages">Averages</string>
  <string name="steps">Steps</string>
  <string name="stepsC">Steps:</string>
  <string name="NA">N/A</string>
  <string name="no_scramble">No scramble\n(time was inserted manually)</string>
  <string name="session_avg">Average:</string>
  <string name="session_mean">Mean:</string>
  <string name="session_solves">Solves:</string>
  <string name="session_best">Best:</string>
  <string name="session_deviation">Deviation:</string>
  <string name="total_solves">Total solves:</string>
  <string name="more">More</string>
  <string name="best_averages">Best averages</string>
  <string name="times">Times</string>
  <string name="session_best_mean_of_three">Best Mo3:</string>
  <string name="session_success_average">Succ. avg:</string>
  <string name="session_accuracy">Accuracy:</string>
  <string name="session_start">Start:</string>
  <string name="clear_history">Clear history</string>
  <string name="clear_history_solve_type_confirmation">Are you sure you want to delete all the times for this solve type?</string>
  <string name="clear_all_history_confirmation">Are you sure you want to delete the whole history?</string>
  <string name="settings">Settings</string>
  <string name="timer_screen">Timer screen</string>
  <string name="inspection_mode">Inspection mode</string>
  <string name="inspection_mode_summary">Select the timer inspection mode</string>
  <string name="hold_and_release_inspection_mode">Hold and release: <i>Push and release once to start</i></string>
  <string name="automatic_inspection_mode">Automatic: <i>Automatic start when inspection is over</i></string>
  <string name="official_inspection_mode">Official: <i>Push for 0.5s to start, use official +2/DNF inspection rules</i></string>
  <string name="inspection_time">Inspection time</string>
  <string name="inspection_time_summary">Select the timer inspection time</string>
  <string name="inspection_sounds">Inspection sounds</string>
  <string name="inspection_sounds_summary">Enable / disable inspection sounds</string>
  <string name="inspection_sounds_type">Inspection warnings type</string>
  <string name="inspection_sounds_type_summary">Select the type of warnings</string>
  <string name="classic_inspection_sound_type">Classic (warn 3 seconds before end)</string>
  <string name="official_inspection_sound_type">Official (warn at 8 and 12 seconds)</string>
  <string name="show_time_when_running">Display time when running</string>
  <string name="show_time_when_running_summary">Display time when timer is running</string>
  <string name="keep_screen_on">Keep screen on</string>
  <string name="keep_screen_on_summary">When timer is not running</string>
  <string name="solve_types">Solve types</string>
  <string name="edit_solve_types">Edit solve types</string>
  <string name="edit_solve_types_summary">Edit, create and delete solve types</string>
  <string name="clear_all_history">Delete all the times</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="choose_cube_type">Choose a cube type:</string>
  <string name="scrambles">Scrambles</string>
  <string name="big_cubes_notation">Big cubes notation</string>
  <string name="big_cubes_notation_summary">Choose the big cubes notation system</string>
  <string name="clock_notation">Clock notation</string>
  <string name="clock_notation_summary">Choose the Clock notation system</string>
  <string name="use_modern_scrambles">Use random-state scrambles</string>
  <string name="use_modern_scrambles_summary">Use new \"random-state\" scrambles</string>
  <string name="scrambles_quality">Scrambles quality</string>
  <string name="scrambles_quality_summary">Select scrambles quality</string>
  <string name="high_quality">High (less moves, slower to generate)</string>
  <string name="normal_quality">Normal</string>
  <string name="low_quality">Low (more moves, quicker to generate)</string>
  <string name="pregen_scrambles">Manually generate scrambles</string>
  <string name="pregen_scrambles_summary">Manually generate random-state scrambles</string>
  <string name="r_u_f">r u f</string>
  <string name="rw_uw_fw">Rw Uw Fw</string>
  <string name="clock_UUdU_x_x">(UUdU, 2, -4)</string>
  <string name="clock_UUdd_ux_dx">UUdd u=-3,d=2</string>
  <string name="clock_URx_DRx_DLx">UR1+ DR6+ DL5- UL3+</string>
  <string name="ads">Advertisements</string>
  <string name="ads_style">Advertisements style</string>
  <string name="ads_style_summary">Choose between banner, interstitial or mixed</string>
  <string name="banner">Banner</string>
  <string name="interstitial">Interstitial</string>
  <string name="mixed">Mixed</string>
  <string name="want_to_clear_scramble_cache">Do you want to clear the scramble cache?</string>
  <string name="modern_scrambles_settings">Random-state scrambles settings</string>
  <string name="modern_scrambles_settings_summary">Choose when / how scrambles are generated</string>
  <string name="notification_mode">Notification mode</string>
  <string name="notification_mode_summary">Choose when to display generation notification</string>
  <string name="when_generating">Always when generating</string>
  <string name="when_generating_manually">Only when manually generating</string>
  <string name="never_show_notif">Never (not recommended)</string>
  <string name="generate_when_plugged_in">Generate when charging</string>
  <string name="generate_when_plugged_in_summary">Automatically generate when charging</string>
  <string name="gen_count_when_plugged_in">Charging scrambles count</string>
  <string name="gen_count_when_plugged_in_summary">Number of scrambles to generate when charging</string>
  <string name="min_cache_size">Minimum cache size</string>
  <string name="min_cache_size_summary">Start automatic generation when reached</string>
  <string name="max_cache_size">Maximum cache size</string>
  <string name="max_cache_size_summary">Stop automatic generation when reached</string>
  <string name="min_scramble_cache_bigger_than_max">The minimum cache size is bigger than the maximum. Min will be set to %1$d</string>
  <string name="min_scramble_cache_too_close_to_max">The minimum cache size is too close to the maximum. Min will be set to %1$d</string>
  <string name="max_scramble_cache_smaller_than_min">The maximum cache size is smaller than the minimum. Max will be set to %1$d</string>
  <string name="max_scramble_cache_too_close_to_min">The maximum cache size is too close to the minimum. Max will be set to %1$d</string>
  <string name="total_scrambles_count">Total generated scrambles: %1$d</string>
  <string name="scrambles_already_generating">Scrambles are already being generated.</string>
  <string name="scrambles_count_not_valid">The scrambles count is not valid.</string>
  <string name="scrambles_count">Scrambles count:</string>
  <string name="generate">Generate</string>
  <string name="stop_generation">Stop generation</string>
  <string name="preparing_generation">Preparing generation&#8230;</string>
  <string name="scrambles_being_generated">%1$s scrambles generating</string>
  <string name="generating_scramble">Generating scramble %1$d of %2$d</string>
  <string name="generating_cube_scramble">%1$s scrambles generating&#8230;\n%2$d of %3$d</string>
  <string name="stopping_generation">Stopping generation&#8230;</string>
  <string name="new_record">New record!</string>
  <string name="inspection">Inspection</string>
  <string name="ready">Ready</string>
  <string name="rate_message">If you like Nano Timer, please take a moment to rate it.\nThanks for your support.</string>
  <string name="rate">Rate</string>
  <string name="rate_now">Rate now</string>
  <string name="ask_later">Ask later</string>
  <string name="dont_ask_again">Never</string>
  <string name="could_not_find_market">Could not find the market app</string>
  <string name="could_not_launch_market">Could not launch the market</string>
  <string name="release_notes">Release notes</string>
  <string name="close">Close</string>
  <string name="pro_version_welcome_title">Welcome to Pro version</string>
  <string name="pro_version_welcome_message">Thanks for purchasing Nano Timer Pro!\nThe following features have been unlocked:</string>
  <string name="pro_version_promotion_title">Nano Timer Pro</string>
  <string name="pro_version_available">Nano Timer Pro is now available on Play Store!</string>
  <string name="pro_version_install">Installing it will unlock the following features:</string>
  <string name="need_pro_version">Download Nano Timer Pro to access this feature</string>
  <string name="upgrade_pro_app">Please update Nano Timer Pro to keep accessing Pro features</string>
  <string name="open_page">Open page</string>
</resources>