<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:custom="http://schemas.android.com/apk/res/com.cube.nanotimer"
   android:orientation="vertical"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:minWidth="450px">

  <LinearLayout
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="90px"
     android:gravity="center"
     android:padding="8px">
    <TextView
       android:id="@+id/tvPlusTwo"
       android:text="@string/plus_two"
       style="@style/MenuButton"/>
    <TextView
       android:id="@+id/tvDNF"
       android:text="@string/DNF"
       style="@style/MenuButton"/>
    <TextView
       android:id="@+id/tvDelete"
       android:text="@string/delete"
       style="@style/MenuButton"/>
  </LinearLayout>

  <TableLayout
     android:id="@+id/layoutTypes"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="8px"
     android:padding="8px"
     android:stretchColumns="1"
     android:layout_alignParentTop="true">
    <TableRow>
      <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/time"
         android:textSize="27px"/>
      <TextView
         android:id="@+id/tvTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15px"
         android:layout_weight="1"
         android:textSize="27px"/>
    </TableRow>
    <TableRow android:id="@+id/trSteps" android:layout_marginTop="8px">
      <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/steps"
         android:textSize="27px"/>
      <TextView
         android:id="@+id/tvSteps"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15px"
         android:layout_weight="1"
         android:textSize="27px"/>
    </TableRow>
  </TableLayout>

  <com.cube.nanotimer.util.view.FontFitTextView
     android:id="@+id/tvScramble"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     custom:font="MONOSPACE"
     android:layout_marginTop="8px"
     android:layout_marginBottom="8px"
     android:padding="3px"
     style="@style/ScrambleTextField"/>

</LinearLayout>