<?xml version="1.0" encoding="utf-8"?>

<com.cube.nanotimer.util.view.ScalingLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:custom="http://schemas.android.com/apk/res/com.cube.nanotimer"
   android:orientation="vertical"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:minWidth="450px">

  <LinearLayout
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
     android:layout_margin="7px">
    <Button
       android:id="@+id/buPlusTwo"
       android:text="@string/plus_two"
       android:layout_marginRight="4px"
       android:layout_weight="1"
       style="@style/MenuButton"/>
    <Button
       android:id="@+id/buDNF"
       android:text="@string/DNF"
       android:layout_marginLeft="4px"
       android:layout_marginRight="4px"
       android:layout_weight="1"
       style="@style/MenuButton"/>
    <Button
       android:id="@+id/buDelete"
       android:text="@string/delete"
       android:layout_marginLeft="4px"
       android:layout_weight="1"
       style="@style/MenuButton"/>
  </LinearLayout>

  <TableLayout
     android:id="@+id/layoutTypes"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="8px"
     android:stretchColumns="1"
     android:layout_alignParentTop="true">
    <TableRow>
      <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/time"
         android:textSize="22px"/>
      <TextView
         android:id="@+id/tvTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15px"
         android:layout_weight="1"
         android:textSize="22px"/>
    </TableRow>
    <TableRow android:id="@+id/trSteps" android:layout_marginTop="8px">
      <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/stepsC"
         android:textSize="22px"/>
      <TextView
         android:id="@+id/tvSteps"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15px"
         android:layout_weight="1"
         android:textSize="22px"/>
    </TableRow>
  </TableLayout>

  <ScrollView
     android:layout_width="match_parent"
     android:layout_height="wrap_content">

    <LinearLayout
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

      <com.cube.nanotimer.util.view.FontFitTextView
         android:id="@+id/tvScramble"
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         custom:font="MONOSPACE"
         android:layout_marginTop="8px"
         android:padding="5px"
         style="@style/ScrambleTextField"/>

      <LinearLayout
         android:id="@+id/averagesTable"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

        <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:text="@string/averages"
           android:textSize="22px"/>

        <TableLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="5px"
           android:padding="1px"
           android:shrinkColumns="*"
           android:stretchColumns="*">
          <TableRow>
            <TextView style="@style/AverageTableHeaderField" android:text="5"/>
            <TextView style="@style/AverageTableHeaderField" android:text="12"/>
            <TextView style="@style/AverageTableHeaderField" android:text="50"/>
            <TextView style="@style/AverageTableHeaderField" android:text="100"/>
          </TableRow>
          <TableRow>
            <TextView android:id="@+id/tvAvgOfFive" style="@style/TableCell"/>
            <TextView android:id="@+id/tvAvgOfTwelve" style="@style/TableCell"/>
            <TextView android:id="@+id/tvAvgOfFifty" style="@style/TableCell"/>
            <TextView android:id="@+id/tvAvgOfHundred" style="@style/TableCell"/>
          </TableRow>
        </TableLayout>

      </LinearLayout>

    </LinearLayout>

  </ScrollView>

</com.cube.nanotimer.util.view.ScalingLinearLayout>